--- a/chandeleur-2021/public/override.css
+++ b/chandeleur-2021/public/override.css
@@ -29,6 +29,12 @@ body > header .logo img {
     max-width: 350px;
 }
 
+@media (max-width: 75em) {
+    body > header nav {
+        background-color: var(--primary);
+    }
+}
+
 body > main > section.primary {
     background-color: #4d4d4d;
 }
@@ -76,4 +82,11 @@ body > footer {
 
 body>header nav .languages a.lang {
     height: 4em;
+}
+
+@media (max-width: 75em) {
+    .jumbo .inner-wrapper .inner h3 {
+        font-size: 1.25em;
+        overflow-wrap: break-word;
+    }
 }
