--- a/chandeleur-2021/public/theme.css
+++ b/chandeleur-2021/public/theme.css
@@ -1904,6 +1904,66 @@ main > .kids .content {
   margin: var(--space-3);
   height: var(--partner-gold-height); }
 
+.page.team main {
+  display: flex;
+  flex-direction: column; }
+
+.page.team .hero {
+  display: flex;
+  flex-direction: column; }
+  .page.team .hero header, .page.team .hero .description {
+    padding: var(--space-4) var(--container-margin); }
+  .page.team .hero header {
+    align-self: center;
+    padding-left: 0;
+    display: flex;
+    align-items: center; }
+    .page.team .hero header .speaker-img {
+      --size: 6rem;
+      height: var(--size, 6rem);
+      min-width: var(--size, 6rem);
+      border-radius: 100%;
+      background-size: cover;
+      box-shadow: 0 0 var(--space-3) var(--darken-3);
+      margin-right: var(--space-4); }
+    .page.team .hero header h1 {
+      margin: 0;
+      padding: 0; }
+    .page.team .hero header ul.socials {
+      display: flex;
+      flex-wrap: wrap;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      font-size: 1.25em;
+      justify-content: flex-start; }
+      .page.team .hero header ul.socials li {
+        flex: 0 1 auto;
+        padding-right: var(--space-4); }
+        .page.team .hero header ul.socials li a.social {
+          width: auto;
+          color: inherit; }
+          .page.team .hero header ul.socials li a.social .icon {
+            width: 1em; }
+  .page.team .hero .description .talks {
+    margin: 1rem auto;
+    max-width: var(--block-text-max-width);
+    padding-left: 0;
+    list-style: none; }
+    .page.team .hero .description .talks .talk {
+      margin-top: 1rem;
+      border: thin solid var(--darken-1);
+      display: inline-flex;
+      padding: var(--space-2);
+      border-radius: var(--space-1); }
+      .page.team .hero .description .talks .talk .tags, .page.team .hero .description .talks .talk .language {
+        margin-right: 1ch; }
+      .page.team .hero .description .talks .talk .tags {
+        white-space: nowrap;
+        align-self: center; }
+      .page.team .hero .description .talks .talk.tag- {
+        display: none; }
+
 /* FAQ */
 @media (max-width: 44.99em) {
   .page.faq .hero .description, .page.fr-faq .hero .description {
