--- a/mardi-gras-2021/static/override.css
+++ b/mardi-gras-2021/static/override.css
@@ -3,7 +3,7 @@
     --jumbo-overlay-opacity: 0.8;
     --primary: #444444;
     --primary-txt: #dddddd;
-    --darker: #1f5d52;
+    --darker: #eeeeee;
 }
 
 .jumbo #jumbo-overlay {
