deploy: les-briques-du-web/les-briques-du-web-website@79d762e27c7eeb404ecd931c87f2954348d406dd

--- a/les-briques-du-web/css/home.css
+++ b/les-briques-du-web/css/home.css
@@ -115,7 +115,7 @@
 .nextEpisode h2 {
   margin-bottom: 2rem;
 }
-.nextEpisode img {
+.nextEpisode a {
   max-width: min(90%, 1200px);
   margin: 0;
 }
