deploy: les-briques-du-web/les-briques-du-web-website@6eb21a5a9863a539f1452fece80c90046c3a4803

--- a/les-briques-du-web/css/index.css
+++ b/les-briques-du-web/css/index.css
@@ -399,6 +399,15 @@ article.team .socials a {
   overflow: hidden;
 }
 
+div.episode_container {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+}
+article.episode_details {
+  max-width: 960px;
+}
+
 article.episode_details .card {
   max-width: 840px;
 }
